force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/sugati__Linked_Services_Extra_Item__c.object-meta.xml
<CustomObject>
    <description>Linked Services and Extra Items</description>
    <label>Linked Services &amp; Extra Item</label>
    <nameField>
        <label>Extra Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Linked Services &amp; Extra Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>