force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__LSEI_Active__c.field-meta.xml
<CustomField>
    <fullName>sugati__LSEI_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>