force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__LSEI_Age_To__c.field-meta.xml
<CustomField>
    <fullName>sugati__LSEI_Age_To__c</fullName>
    <label>Age To</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>