force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__LSEI_Charging_Option__c.field-meta.xml
<CustomField>
    <fullName>sugati__LSEI_Charging_Option__c</fullName>
    <description>Support for charging linked services by per person, per day, per week</description>
    <inlineHelpText>Support for charging linked services by per person, per day, per week</inlineHelpText>
    <label>Charging Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Per Person</fullName>
            </value>
            <value>
                <fullName>Per Day</fullName>
            </value>
            <value>
                <fullName>Per Week</fullName>
            </value>
            <value>
                <fullName>Per Booking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>