force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__LSEI_Charging_Option_Frequency__c.field-meta.xml
<CustomField>
    <fullName>sugati__LSEI_Charging_Option_Frequency__c</fullName>
    <inlineHelpText>It will be used to determine the charging frequency for a linked service or extra item applied to a booking. It will be used in conjunction with the Charging Option.</inlineHelpText>
    <label>Charging Option Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Per Day</fullName>
            </value>
            <value>
                <fullName>Per Week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>