force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__LSEI_Component__c.field-meta.xml
<CustomField>
    <fullName>sugati__LSEI_Component__c</fullName>
    <label>Component</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sugati__SB_Components</valueSetName>
    </valueSet>
</CustomField>