force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__LSEI_Consider_Secondary_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__LSEI_Consider_Secondary_Supplier__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If you want to use the secondary supplier for looking up the linked services and extras then this checkbox should be check.</inlineHelpText>
    <label>Consider Secondary Supplier</label>
    <type>Checkbox</type>
</CustomField>