force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__LSEI_Cost__c.field-meta.xml
<CustomField>
    <fullName>sugati__LSEI_Cost__c</fullName>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>