force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__LSEI_Cost_Analysis_Code__c.field-meta.xml
<CustomField>
    <fullName>sugati__LSEI_Cost_Analysis_Code__c</fullName>
    <label>Cost Analysis Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accidental Damage Wavier</fullName>
            </value>
            <value>
                <fullName>Accommodation</fullName>
            </value>
            <value>
                <fullName>Car Hire</fullName>
            </value>
            <value>
                <fullName>Tourist Tax</fullName>
            </value>
            <value>
                <fullName>Credit Card Charge</fullName>
            </value>
            <value>
                <fullName>Ferry</fullName>
            </value>
            <value>
                <fullName>Flights</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Security Deposit</fullName>
            </value>
            <value>
                <fullName>Security Deposit Refunds</fullName>
            </value>
            <value>
                <fullName>Transfers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>