force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__LSEI_Description__c.field-meta.xml
<CustomField>
    <fullName>sugati__LSEI_Description__c</fullName>
    <label>Description</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>