force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__LSEI_Display_on_Arrival_Report__c.field-meta.xml
<CustomField>
    <fullName>sugati__LSEI_Display_on_Arrival_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Support for if the linked service is shown on the arrivals report</description>
    <inlineHelpText>Support for if the linked service is shown on the arrivals report</inlineHelpText>
    <label>Display on Arrival Report</label>
    <type>Checkbox</type>
</CustomField>