force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__LSEI_Display_on_Invoice__c.field-meta.xml
<CustomField>
    <fullName>sugati__LSEI_Display_on_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display on Invoice</label>
    <type>Checkbox</type>
</CustomField>