force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__LSEI_Dont_Display_on_On_Boarding_Form__c.field-meta.xml
<CustomField>
    <fullName>sugati__LSEI_Dont_Display_on_On_Boarding_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To hide and show Extra line item on Onboarding Form.</description>
    <label>Don&apos;t Display on On-Boarding Form</label>
    <type>Checkbox</type>
</CustomField>