force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__LSEI_Duration_From__c.field-meta.xml
<CustomField>
    <fullName>sugati__LSEI_Duration_From__c</fullName>
    <label>Duration From</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>