force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__LSEI_Free_Option__c.field-meta.xml
<CustomField>
    <fullName>sugati__LSEI_Free_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Option</label>
    <type>Checkbox</type>
</CustomField>