force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__LSEI_Holiday_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__LSEI_Holiday_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Holiday Type</label>
    <referenceTo>sugati__Holiday_Type__c</referenceTo>
    <relationshipLabel>Linked Services &amp; Extra Items</relationshipLabel>
    <relationshipName>Linked_Services_Extra_Items</relationshipName>
    <type>Lookup</type>
</CustomField>