force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__LSEI_Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>sugati__LSEI_Internal_Notes__c</fullName>
    <label>Internal Notes</label>
    <type>TextArea</type>
</CustomField>