force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__LSEI_Invoice_Text__c.field-meta.xml
<CustomField>
    <fullName>sugati__LSEI_Invoice_Text__c</fullName>
    <label>Invoice Text</label>
    <type>TextArea</type>
</CustomField>