force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__LSEI_Pay_Locally__c.field-meta.xml
<CustomField>
    <fullName>sugati__LSEI_Pay_Locally__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pay Locally</label>
    <type>Checkbox</type>
</CustomField>