force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__LSEI_Relate_Cost_to_Secondary_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__LSEI_Relate_Cost_to_Secondary_Supplier__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When this setting is checked then the system will automatically save the secondary supplier as the arranged by on the supplier booking and all cost will be associated with the secondary supplier.</inlineHelpText>
    <label>Relate Cost to the Secondary Supplier?</label>
    <type>Checkbox</type>
</CustomField>