force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__LSEI_Secondary_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__LSEI_Secondary_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This supplier is purely used for filtering down the linked services.</inlineHelpText>
    <label>Secondary Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Linked Services &amp; Extra Items (Secondary Supplier)</relationshipLabel>
    <relationshipName>Linked_Services_Extra_Items</relationshipName>
    <type>Lookup</type>
</CustomField>