force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__LSEI_Sell__c.field-meta.xml
<CustomField>
    <fullName>sugati__LSEI_Sell__c</fullName>
    <inlineHelpText>Will always be converted in the booking currency.</inlineHelpText>
    <label>Sell</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>