force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__LSEI_Service_From_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__LSEI_Service_From_Date__c</fullName>
    <label>Service From Date</label>
    <type>Date</type>
</CustomField>