force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__LSEI_Show_in_Booking_Window__c.field-meta.xml
<CustomField>
    <fullName>sugati__LSEI_Show_in_Booking_Window__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show in Booking Window</label>
    <type>Checkbox</type>
</CustomField>