force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__LSEI_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__LSEI_Supplier__c</fullName>
    <inlineHelpText>Supplier who suppliers this particular service. And LS or EI will always have a supplier.</inlineHelpText>
    <label>Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Linked Services &amp; Extra Items</relationshipLabel>
    <relationshipName>Extra_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>