force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__LSEI_To_Airport_Station__c.field-meta.xml
<CustomField>
    <fullName>sugati__LSEI_To_Airport_Station__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Airport &amp; Station</label>
    <referenceTo>sugati__Airport__c</referenceTo>
    <relationshipLabel>Linked Services &amp; Extra Items (To Airport &amp; Station)</relationshipLabel>
    <relationshipName>Linked_Services_Extra_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>