force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__S_LSEI_Activity__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_LSEI_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity</label>
    <referenceTo>sugati__Activity__c</referenceTo>
    <relationshipLabel>Linked Services &amp; Extra Items</relationshipLabel>
    <relationshipName>Linked_Services_Extra_Items</relationshipName>
    <type>Lookup</type>
</CustomField>