force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__S_LSEI_Costing_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_LSEI_Costing_Currency__c</fullName>
    <inlineHelpText>The costing currency for this Linked Service or Extra Item.</inlineHelpText>
    <label>Costing Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sugati__Supplier_Currencies</valueSetName>
    </valueSet>
</CustomField>