force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__S_LSEI_Countries__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_LSEI_Countries__c</fullName>
    <description>The countries this extra should be available for.</description>
    <inlineHelpText>The countries this extra should be available for.</inlineHelpText>
    <label>Countries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sugati__Countries</valueSetName>
    </valueSet>
</CustomField>