force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__S_LSEI_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_LSEI_Image_URL__c</fullName>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>