force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__S_LSEI_Inventory_Level__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_LSEI_Inventory_Level__c</fullName>
    <label>Inventory Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tour</fullName>
            </value>
            <value>
                <fullName>Extra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>