force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__S_LSEI_Is_Global__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_LSEI_Is_Global__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is ticked, the extra will be available to all tours, regardless of supplier.</description>
    <inlineHelpText>If this is ticked, the extra will be available to all tours, regardless of supplier.</inlineHelpText>
    <label>Is Global</label>
    <type>Checkbox</type>
</CustomField>