force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__S_LSEI_Master__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_LSEI_Master__c</fullName>
    <defaultValue>false</defaultValue>
    <description>&apos;Master&apos; extra record (one that tour / template specific extra records are based off)</description>
    <label>Master</label>
    <type>Checkbox</type>
</CustomField>