force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__S_LSEI_Master_Inventory_Level__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_LSEI_Master_Inventory_Level__c</fullName>
    <formula>TEXT(sugati__S_LSEI_Master_LSEI__r.sugati__S_LSEI_Inventory_Level__c)</formula>
    <label>Master Inventory Level</label>
    <type>Text</type>
</CustomField>