force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__S_LSEI_Master_LSEI__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_LSEI_Master_LSEI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Linked Services / Extra item record that this tour/template-specific one is cloned from</description>
    <label>Master LSEI</label>
    <referenceTo>sugati__Linked_Services_Extra_Item__c</referenceTo>
    <relationshipLabel>Linked Services &amp; Extra Items</relationshipLabel>
    <relationshipName>Linked_Services_Extra_Items</relationshipName>
    <type>Lookup</type>
</CustomField>