force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__S_LSEI_Master_Total_number_available__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_LSEI_Master_Total_number_available__c</fullName>
    <formula>sugati__S_LSEI_Master_LSEI__r.sugati__S_LSEI_Total_number_available__c</formula>
    <label>Master Total number available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>