force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__S_LSEI_Max_Qty_Per_Person__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_LSEI_Max_Qty_Per_Person__c</fullName>
    <label>Max Qty Per Person</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>