force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__S_LSEI_Number_of_extra_nights__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_LSEI_Number_of_extra_nights__c</fullName>
    <description>The number of extra nights that this pre/post holiday extra should add</description>
    <inlineHelpText>The number of extra nights that this pre/post holiday extra should add</inlineHelpText>
    <label>Number of extra nights</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>