force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__S_LSEI_Number_of_Extras_Remaining__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_LSEI_Number_of_Extras_Remaining__c</fullName>
    <description>The quantity of the extra available</description>
    <formula>IF (
    NOT(ISNULL(sugati__S_LSEI_Total_number_available__c)), 
    sugati__S_LSEI_Total_number_available__c -  sugati__S_LSEI_Number_of_Extras_Sold__c, 
    sugati__S_LSEI_Total_number_available__c
)</formula>
    <inlineHelpText>The quantity of the extra available</inlineHelpText>
    <label>Number of Extras Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>