force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__S_LSEI_Number_of_Extras_Sold__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_LSEI_Number_of_Extras_Sold__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The total number sold for this extra</description>
    <inlineHelpText>The total number sold for this extra</inlineHelpText>
    <label>Number of Extras Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>