force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__S_LSEI_Promote_Extra__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_LSEI_Promote_Extra__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Promote Extra</label>
    <type>Checkbox</type>
</CustomField>