force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__S_LSEI_Selling_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_LSEI_Selling_Currency__c</fullName>
    <inlineHelpText>The selling currency for this Linked Service or Extra Item. If sell price is empty, this field will be ignored.</inlineHelpText>
    <label>Selling Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sugati__Supplier_Currencies</valueSetName>
    </valueSet>
</CustomField>