force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__S_LSEI_Special_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_LSEI_Special_Type__c</fullName>
    <label>Special Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Supplement</fullName>
            </value>
            <value>
                <fullName>Extra Night - Pre holiday</fullName>
            </value>
            <value>
                <fullName>Extra Night - Post holiday</fullName>
            </value>
            <value>
                <fullName>Bolt On - Pre Holiday</fullName>
            </value>
            <value>
                <fullName>Bolt On - Post Holiday</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
                <isActive>false</isActive>
                <label>Global</label>
            </value>
            <value>
                <fullName>Travel Insurance</fullName>
                <isActive>false</isActive>
                <label>Travel Insurance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>