force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/fields/sugati__S_LSEI_Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_LSEI_Supplier_Name__c</fullName>
    <formula>sugati__LSEI_Supplier__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Name</label>
    <type>Text</type>
</CustomField>