force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/recordTypes/sugati__Extra.recordType-meta.xml
<RecordType>
    <fullName>sugati__Extra</fullName>
    <active>true</active>
    <description>Not part of any contracts. This is an additional payable add on</description>
    <label>Extra</label>
</RecordType>