force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/recordTypes/sugati__Linked_Service.recordType-meta.xml
<RecordType>
    <fullName>sugati__Linked_Service</fullName>
    <active>true</active>
    <description>As part of a contract offering</description>
    <label>Linked Service</label>
</RecordType>