force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/recordTypes/sugati__Transfer.recordType-meta.xml
<RecordType>
    <fullName>sugati__Transfer</fullName>
    <active>false</active>
    <label>Transfer</label>
</RecordType>