force-app/main/default/objects/sugati__Linked_Services_Extra_Item__c/listViews/sugati__All.listView-meta.xml
<ListView>
    <fullName>sugati__All</fullName>
    <columns>NAME</columns>
    <columns>sugati__LSEI_Confirmation_From_Date__c</columns>
    <columns>sugati__LSEI_Confirmation_End_Date__c</columns>
    <columns>sugati__LSEI_Service_From_Date__c</columns>
    <columns>sugati__LSEI_Service_To_Date__c</columns>
    <columns>sugati__LSEI_Duration_From__c</columns>
    <columns>sugati__LSEI_Duration_To__c</columns>
    <columns>sugati__LSEI_Age_From__c</columns>
    <columns>sugati__LSEI_Age_To__c</columns>
    <columns>sugati__LSEI_Pax_From__c</columns>
    <columns>sugati__LSEI_Pax_To__c</columns>
    <columns>sugati__LSEI_Charging_Option__c</columns>
    <columns>sugati__LSEI_Supplier__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>